<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiant_background">

    <Button android:id="@+id/button1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_id"
        android:layout_gravity="end"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/jar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jar_title"
            tools:context=".MainActivity"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/jar_list"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/holo_blue_dark"
            android:layout_margin="15dp"
            android:background="@drawable/border_ui"
            android:divider="@android:color/background_light"
            android:dividerHeight="2dp"
            android:textColor="@drawable/textview_text"
            android:scrollbarSize="12dip"
            >
        </ListView>

       <EditText android:id="@+id/goal_amount"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/goal"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:id="@+id/rule_types_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_types_title"
            tools:context=".MainActivity"
            android:textSize="17sp"
            android:textColor="@android:color/white"/>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/rule_list"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/holo_blue_dark"
            android:layout_margin="15dp"
            android:background="@drawable/border_ui"
            android:divider="@android:color/background_light"
            android:dividerHeight="2dp"
            android:textColor="@drawable/textview_text"
            android:scrollbarSize="12dip">
        </ListView>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:id="@+id/actions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actions_title"
            tools:context=".MainActivity"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            />

        <ListView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/action_list"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/holo_blue_dark"
            android:background="@drawable/border_ui"
            android:divider="@android:color/background_light"
            android:dividerHeight="2dp"
            android:textColor="@drawable/textview_text"
            android:scrollbarSize="12dip">
        </ListView>
    <Button android:id="@+id/button_save"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_save"
        android:layout_gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/save_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                tools:context=".MainActivity"/>
        </ScrollView>


</LinearLayout>